[package]
name = "deltatune_layershell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mpris = "2"
image = "0.24"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
tray-icon = "0.12"
gtk = "0.18"
minifb = "0.25"